--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8081
 spring.application.name=WheelTrader
+
+spring.datasource.url=jdbc:mysql://localhost:3306/prueba_wheeltrader
+spring.datasource.username=josecarlos
+spring.datasource.password=Pestillo1@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
