inicio de sesion con todos los datos del usuario y conexion a bd hecha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 server.port=8081
 spring.application.name=WheelTrader
 
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba_wheeltrader
-spring.datasource.username=josecarlos
-spring.datasource.password=Pestillo1@
+spring.datasource.url=jdbc:mysql://localhost:3336/prueba_wheeltrader
+
+#Portatil
+#spring.datasource.username=josecarlos
+#spring.datasource.password=Pestillo1@
+
+# Torre
+spring.datasource.username=root
+spring.datasource.password=LegoJCPGp.
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
