inicio de sesión con correo implementado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 server.port=8081
 spring.application.name=WheelTrader
 
-spring.datasource.url=jdbc:mysql://localhost:3336/prueba_wheeltrader
 
 #Portatil
+#spring.datasource.url=jdbc:mysql://localhost:3306/prueba_wheeltrader
 #spring.datasource.username=josecarlos
 #spring.datasource.password=Pestillo1@
 
 # Torre
+spring.datasource.url=jdbc:mysql://localhost:3336/prueba_wheeltrader
 spring.datasource.username=root
 spring.datasource.password=LegoJCPGp.
 
