--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.application.name=WheelTrader
 
 
 #Portatil
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba_wheeltrader
-spring.datasource.username=josecarlos
-spring.datasource.password=Pestillo1@
+#spring.datasource.url=jdbc:mysql://localhost:3306/prueba_wheeltrader
+#spring.datasource.username=josecarlos
+#spring.datasource.password=Pestillo1@
 
 # Torre
-#spring.datasource.url=jdbc:mysql://localhost:3336/prueba_wheeltrader
-#spring.datasource.username=root
-#spring.datasource.password=LegoJCPGp.
+spring.datasource.url=jdbc:mysql://localhost:3336/prueba_wheeltrader
+spring.datasource.username=root
+spring.datasource.password=LegoJCPGp.
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
