--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=WheelTrader
 
 
 #Portatil
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba_wheeltrader
-spring.datasource.username=josecarlos
+spring.datasource.url=jdbc:mysql://localhost:3306/wheeltrader_db
+spring.datasource.username=wt-user
 spring.datasource.password=Pestillo1@
 
 # Torre
