cambios después de la presentación

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=WheelTrader
 
 #Portatil
 spring.datasource.url=jdbc:mysql://localhost:3306/wheeltrader_db
-spring.datasource.username=wt-user
+spring.datasource.username=josecarlos
 spring.datasource.password=Pestillo1@
 
 # Torre
